# ai-powered-smart-shopping-assistant-product-decision-engine

./: .gitignore  README.md  readme.md
back end/: main.py  pyproject.toml
back end/agent/: agent_on.py  scratch_test.py  test-kasir.py
deliverables/demonstration-video/: README.md  link demo.txt
deliverables/product-data-repository/: README.md  products_rows.csv
front end/: next.config.ts
front end/app/: globals.css
tasks/: WBS.md
tasks/back end/: main.py  test.py
tasks/back end/agent/: agent.py  agent_test.py
tasks/front end/: package.json  proxy.ts
tasks/front end/app/: page.tsx
tasks/front end/app/(auth)/login/: page.tsx
tasks/front end/app/(auth)/register/: page.tsx
tasks/front end/app/chat/: BubbleChat.tsx  page.tsx  sidebar.tsx
tasks/front end/store/: chatStore.ts
