[project]
name = "capstone-lastmile"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.13.0",
    "aiofiles>=25.1.0",
    "bcrypt==3.2.0",
    "cryptography>=46.0.7",
    "dotenv>=0.9.9",
    "fastapi>=0.136.1",
    "google-generativeai>=0.8.6",
    "huggingface-hub>=1.13.0",
    "langchain>=1.2.17",
    "langchain-community>=0.4.1",
    "langchain-core>=1.3.2",
    "langchain-google-genai>=4.2.2",
    "langchain-groq>=1.1.2",
    "langchain-huggingface>=1.2.2",
    "langchain-openai>=1.2.1",
    "langgraph>=1.1.10",
    "langgraph-checkpoint-postgres>=3.0.5",
    "mlflow>=3.11.1",
    "passlib>=1.7.4",
    "pillow>=12.2.0",
    "psycopg-pool>=3.3.1",
    "psycopg2-binary>=2.9.12",
    "psycopg[binary]>=3.3.4",
    "pydantic[email]>=2.13.3",
    "python-dotenv>=1.2.2",
    "python-jose>=3.5.0",
    "python-multipart>=0.0.28",
    "sqlmodel>=0.0.38",
    "supabase>=2.29.0",
    "transformers>=5.7.0",
    "uvicorn>=0.46.0",
]
